// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unauthenticated renders a login form 1`] = `
<DocumentFragment>
  <div
    data-testid="loading"
  >
    Loading...
  </div>
</DocumentFragment>
`;

exports[`Unauthenticated renders an error message if something goes wrong 1`] = `
<DocumentFragment>
  <div
    data-testid="error"
  >
    <h1
      data-testid="error-title"
    >
      <span
        resource="error"
      >
        error
      </span>
    </h1>
  </div>
</DocumentFragment>
`;

exports[`Unauthenticated renders loading when translations are not loaded yet 1`] = `
<DocumentFragment>
  <div
    data-testid="loading"
  >
    Loading...
  </div>
</DocumentFragment>
`;
